--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     </div>
 <div style="color:#282E34; background-color:#fff;text-align:left;padding:10px 50px 10px 50px;margin-left: 14.25%;">
     <a name="politics"></a><h3 style="text-align: center">The Opposition: Politicians</h3>
+<iframe src='http://www.criticalcommons.org/Members/mattdelmont/clips/president-nixon-speech-on-busing-3-16-72-cbs/embed_view' frameborder='0' width='450' height='330' align='right'></iframe>
     <p class="text2">Responding to the anti-busing demands of their constituents, politicians (ranging from the local to the federal level) adopted public anti-busing sentiment as part of their political maneuvering. Due to the overwhelming unpopularity of busing, politicians - both conservative and liberal - were forced to adopt anti-busing rhetoric in order to maintain their political positions. For instance, Senator Jesse Helms of North Carolina (1973-2003) staunchly opposed busing, arguing that the integrationist effort undermined individual rights (<i>see the audio clips below this paragraph</i>). Presidents Gerald Ford, Richard Nixon, and Ronald Reagan echoed these sentiments, demanding that Congress outlaw “forced busing” and reinstate “freedom of choice” in educational matters. Referring to busing as a “failed experiment,” Reagan and other politicians maintained that while racial segregation was undesirable, mandatory busing was not the answer. </p>
     <audio controls>
     <source src="http://www4.ncsu.edu/~jtnorri2/helms.mp3" type="audio/mpeg">
