--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <body>
         <!--BEGIN NAV -->
         <ul id="list1"> 
-				<li><a href="#title">Timeline</a></li>
-				<li><a href="#intro">Introduction</a></li>
-				<li><a href="#plessy">Plessy v. Ferguson</a></li>
+		<li>MENU</li>		
+		<li><a href="#title">Timeline</a></li>
+		<li><a href="#intro">Introduction</a></li>
+		<li><a href="#plessy">Plessy v. Ferguson</a></li>
                 <li><a href="#brown">Brown v. Board of Ed.</a></li>
                 <li><a href="#swann">Swann v. Charlotte-Mecklenburg</a></li>
                 <li><a href="#opposition">The Opposition: Anti-Busing Groups</a></li>
