--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ span.onclick = function() {
       <p>Project done for Digital History (HI534) at North Carolina State University, Fall 2016</p>
       <p>For a full bibliography, click <a href="https://docs.google.com/document/d/e/2PACX-1vSq_-u22vR9Nfrxgn560Rg_pO4LdeGTdunU0BBmBSQFlDhgZJf3DEm531p-Y0X-XCQxLujVI8GZNHRs/pub">here</a>.</p>
   <p>Contact information: <a href="mailto:fsantos2@ncsu.edu" title="fsantos2@ncsu.edu">Frederico Freitas</a>.</p>
+	  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
     </div> 
 </footer>
 </body>
