--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
     <body>
         <!--BEGIN NAV -->
-        <ul id="list1"> 		
+        <ul id="list1">
+		<li>Beyond Black and White</li>
+		<hr>
 		<li><a href="#title">Timeline</a></li>
 		<li><a href="#intro">Introduction</a></li>
 		<li><a href="#plessy">Plessy v. Ferguson</a></li>
@@ -47,7 +49,7 @@
                     }
                 </script> 
         <div id="key">
-            <p><i>Key: Image when slid to the left is student demographic information from 1970, and when slid to the right it is student demographic information from 2015; both datasets are of Charlotte-Mecklenburg schools. The beige tones represent fairly well integrated schools.</i></p>
+            <p>Key: Image when slid to the left is student demographic information from 1970, and when slid to the right it is student demographic information from 2015; both datasets are of Charlotte-Mecklenburg schools. The beige tones represent fairly well integrated schools.</p>
         </div>
         <!-- End 2007/2015 slider. -->
     </div>
@@ -60,7 +62,7 @@
             <p class="text2">In the 1950s, the NAACP brought several class action lawsuits on behalf of African American children and their families in the hopes of racially integrating public school districts. One such lawsuit, <i>Brown v. Board of Education of Topeka</i>¸ argued that racial segregation violated the Constitution’s Equal Protection Clause because separate facilities were not – and could never be – wholly equal. The Supreme Court agreed, declaring that racial segregation in public schools, as made legal by <i>Plessy v. Ferguson</i>, violated the Fourteenth Amendment, and that states were required to provide quality public education, regardless of race. According to the court, racial segregation in schools was “inherently unequal and thus unconstitutional.” One year later, in the <i>Brown II</i> decision, the Supreme Court demanded that states embrace racial integration in their schools “with all deliberate speed.”</p>
         <figure style="align:right;">
             <img style="padding-left:50px;" src="http://ridic.web.unc.edu/files/2014/03/White-Flight.jpg">
-            <figcaption><i>Source: Library of Congress</i></figcaption></figure>
+            <figcaption>Source: Library of Congress</figcaption></figure>
             <p class="text2">However, even after the landmark <i>Brown v. Board</i> decision, schools in the Charlotte-Mecklenburg area remained segregated. Despite the fact that a few African American students were allowed entry into predominately white schools, their experiences were often brief and tumultuous. Public opposition to racial integration swelled as parents, administrators, students, and politicians protested the decision.</p>
             <p class="text2">Initially, North Carolina adopted legislation in order to subvert the <i>Brown</i> decision. For instance, the Pearsall Committee developed the "Pearsall Plan to Save Our Schools" in 1954, which revised the Compulsory School Attendance Law. This provision exempted students from attending an integrated public school and proposed that the state authorize funding to cover private school tuition for students who were assigned to attend integrated public schools. In this way, white students were able to avoid the Supreme Court's desegregation mandate.</p>
         
@@ -69,7 +71,7 @@
     <div style="color: #282E34; background-color:#fff;text-align:left;padding:10px 50px 10px 50px;margin-left: 14.25%;">
         <a name="swann"></a><h3 style="text-align:center">Swann v. Charlotte-Mecklenburg Board of Education (1971)</h3>
     <figure style="align:right;">
-        <img src="http://charlottemagazine-images.dashdigital.com/P0070_0972_02_10A_DonSturkey.jpg?ver=1407949193"><figcaption><i> Police Officer at South Mecklenburg High School, 1971 (Don Sturkey, Courtesy UNC Library)</i></figcaption>
+        <img src="http://charlottemagazine-images.dashdigital.com/P0070_0972_02_10A_DonSturkey.jpg?ver=1407949193"><figcaption>Police Officer at South Mecklenburg High School, 1971. Source: Don Sturkey, Courtesy UNC Library</figcaption>
         </figure>    
         <p class="text2">In 1965, the Swann family sued Charlotte-Mecklenburg Schools in order for their son to attend a closer, “whiter” school. Though technically integrated at the time, Charlotte’s schools were still racially imbalanced, with 42% either completely segregated or with fewer than six students of the opposite race in attendance. US District Judge James McMillian heard the case, finding that racially biased housing codes had produced all-African American neighborhoods, which had resulted in all-African American schools. As a result of this finding, McMillian ruled in 1969 that Charlotte-Mecklenburg schools were required to implement “all known ways of desegregating” in their efforts to achieve integration, including busing.</p>
         <p class="text2">Members of the school board and white parents were outraged by the decision, and appealed the case to the Supreme Court. The Supreme Court unanimously reinforced Judge McMillian’s ruling and ordered Charlotte-Mecklenburg Schools to initiate desegregation, first and foremost by submitting an integration plan to the district court for the 1969-1970 school year. Eventually, an outside consultant, Dr. John Finger, helped to create a report that facilitated the busing of African American and White students; this report was approved by the court and adopted for the 1969-1970 school year. For the first time in history, the courts were ordering that schools embrace mandatory busing in order to achieve racial integration. In this way, Charlotte-Mecklenburg represented one of the most widespread and comprehensive efforts at school desegregation of the era.</p>
@@ -81,7 +83,7 @@
         <h3 style="text-align:center">The Opposition: Anti-Busing Groups</h3>
             <p class="text2">Several challenges arose as a result of the busing plan. For instance, the integration plan required both hefty start-up expenses and transportation costs. Additionally, class start times were altered in order to accommodate the busing system, with students averaging a 35 to 75-minute ride. Faced with these challenges, many white families opted to move out of the districts subject to busing, resulting in widespread “white flight.” Alternatively, parents chose to enroll their children in the expanding private school system that tailored to upper-middle class white families.</p>
             <p class="text2">Opposition to busing proved fierce in Charlotte, both during and after the <i>Swann</i> case. For instance, several white parents, angered by the court’s decision, coalesced to form the Concerned Parents Association (CPA). This anti-busing protest group mobilized and publicly opposed busing through petitions, boycotts, and demonstrations. The CPA possessed neither formal leadership nor membership. Utilizing informal means (such as phone trees, pamphlets, and word of mouth) the organization avoided overt appeals to white racism. Rather, the CPA (and other opponents of busing) argued for “freedom of choice” in school selection and for the return of "neighborhood schools."</p>
-       <figure style="align:right;"><img style="height:500px;padding-left:60px;" src="http://img.timeinc.net/time/magazine/archive/covers/1971/1101711115_400.jpg"><figcaption><i>November 15, 1971 Time Magazine Cover</i></figcaption></figure>
+       <figure style="align:right;"><img style="height:500px;padding-left:60px;" src="http://img.timeinc.net/time/magazine/archive/covers/1971/1101711115_400.jpg"><figcaption>November 15, 1971 Time Magazine Cover</figcaption></figure>
             <p class="text2">Capitalizing on the momentum behind the anti-busing movement, the CPA also influenced local school board elections. Endorsing anti-busing candidates, the CPA’s representatives won significantly in both the suburbs and rural areas. Unable to prevent busing via the court system, the CPA urged parents to boycott the public schools at the beginning of the 1969-1970 school year. Immediately before the start of the term, the CPA rallied, with 10,000 people congregating in protest. With approximately one in five students failing to attend their orientation, the boycott initially appeared successful; however, within the week, this success wavered as less than ten percent of students continued to miss school.</p>
             <p class="text2">After the <i>Swann</i> decision both the CPA and other anti-busing initiatives dissolved. CPA leader and Board of Education chairman William Poe expressed the sentiments of many when he conceded that, “We can’t do anything about it, so we might as well concentrate on the things we can do something about.” One year later, the CPA’s anti-busing candidates for the school board election lost to their pro-busing, moderate opponents. In only three years, the CPA had originated as a channel for the outrage of Charlotte’s white citizens, and subsequently commanded the busing debate, before quietly dismantling.</p>
     </div>
@@ -92,10 +94,12 @@
     <source src="http://www4.ncsu.edu/~jtnorri2/helms.mp3" type="audio/mpeg">
     It seems your browser does not support this audio. 
     </audio>
+	<p class="text2">Jesse Helms on individual rights</p>
     <audio controls>
      <source src="http://www4.ncsu.edu/~jtnorri2/helms2.mp3" type="audio/mpeg">
     It seems your browser does not support this audio.
     </audio>
+	<p class="text2">Jesse Helms on discontent with busing</p>
         </div>
         <div class= "scroll3">
         <div class="caption3">
@@ -157,13 +161,13 @@ span.onclick = function() {
         <h3 style="text-align:center"><a name="end"></a>The End of Busing</h3>
         <p class="text2">The birth of the Charter School Movement coincided with the demise of active integrationist efforts amid the public schools, including busing. The city’s success with busing, and with educational integration, had lasted for approximately three decades. However, the program was threatened when a white parent sued the school district because he believed his child was denied admittance into a local magnet school based on racial considerations. The Charlotte-Mecklenburg School Board attempted to defend its desegregation strategies, pointing to the success of the plan, but to no avail. In 1999, Federal District Court Judge Robert Potter ordered that race could no longer be considered in school assignments,  ruling that Charlotte-Mecklenburg schools had “eliminated, to the extent practicable, the vestiges of past discrimination in the traditional areas of school operations.” Potter had participated in the anti-busing movement throughout the 1960s as a citizen, which likely contributed to the outcome of the case. Charlotte-Mecklenburg Schools appealed the decision; however, in 2001 the Fourth Circuit Court of Appeals sided with the plaintiffs, arguing that Charlotte-Mecklenburg had succeeded in achieving “unitary” status and that the schools could no longer be considered segregated. Charlotte's relationship with busing had come to an end.</p>
         <figure style="align:right;">
-        <img src="http://charlottemagazine-images.dashdigital.com/0914_FEA_BUSING_VB_yearbook3.JPG?ver=1407950262"><figcaption><i>African American and white school children on a school bus, riding from the suburbs to an inner city school, Charlotte, North Carolina, 1973. Source: Library of Congress.</i></figcaption>
+        <img src="http://charlottemagazine-images.dashdigital.com/0914_FEA_BUSING_VB_yearbook3.JPG?ver=1407950262"><figcaption>African American and white children, riding from the suburbs to an inner city school, Charlotte, North Carolina, 1973. Source: Library of Congress.</figcaption>
         </figure> 
         <p class="text2">The elimination of race as a consideration in student school assignment proved to have devastating consequences for the city’s African American public school children. In lieu of busing, the city adopted a new “Family Choice Plan,” where students overwhelming attended schools in their neighborhood. However, because the majority of the neighborhoods in Charlotte remained racially segregated, the school achievement gap became increasingly widened by disparities in resources and income. Aside from less diverse schools, this new system also contributed to the concentration of social, political, and economic resources in a handful of white neighborhoods. Therefore, in the absence of active integration efforts, the Charlotte-Mecklenburg school system reverted to a policy of <i>de facto</i> segregation by returning to a system of neighborhood schools.</p>
         <p class="text2">The integration success of the <i>Swann v. Charlotte-Mecklenburg</i> decision was effectively overturned by the 1999 decision. Since then, changes in the school system’s vision statement reflect the subsequent racial resegregation of schools. In 1991, the vision statement claimed that “The Vision is to ensure that the Charlotte-Mecklenburg School System becomes the premier, urban <i>integrated</i> system in the nation in which all students acquire the knowledge, skills, and values necessary to live rich and full lives as productive and enlightened members of society.” In 2016, the vision statement had been altered, instead stating that “Charlotte-Mecklenburg Schools provides all students the best education available anywhere, preparing every child to lead a rich and productive life.” The subsequent removal of the term “integrated” from the vision statement reflects the removal of the philosophy and practice of racial integration in Charlotte’s public schools. Since the <i>Swann v. Charlotte-Mecklenburg</i> decision was overturned, Charlotte’s schools have essentially resegregated.<br>
         </p> 
     </div>
-<div class="box3"><iframe width="85.75%" height="520" align="right" frameborder="0" src="https://jtnorris7.carto.com/viz/2cdd641c-b0f5-11e6-a813-0e3ebc282e83/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe> </div>	
+<div class="box3"><iframe width="85.75%" height="520" align="right" frameborder="0" src="https://jtnorris7.carto.com/viz/2cdd641c-b0f5-11e6-a813-0e3ebc282e83/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe> </div><br>
     <footer>
   <div class="footer" style="color: aliceblue;background-color:#333333;text-align:center;padding:0 40px 10px 30px;margin-left:14%;font-family:'mr-eaves-sans',sans-serif;">
   <p>Created by: Nicole Coscolluela, Megan Cullen, Jason Norris, and Jeanette Shaffer</p>
