--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <!--BEGIN NAV -->
         <ul id="list1">
-		<li>Beyond Black and White</li>
+		<li><a>Beyond Black and White</a></li>
 		<hr>
 		<li><a href="#title">Timeline</a></li>
 		<li><a href="#intro">Introduction</a></li>
