--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@ span.onclick = function() {
 <div class="box3"><iframe width="85.75%" height="520" align="right" frameborder="0" src="https://jtnorris7.carto.com/viz/2cdd641c-b0f5-11e6-a813-0e3ebc282e83/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe> </div><br>
     <footer>
   <div class="footer" style="color: aliceblue;background-color:#333333;text-align:center;padding:0 40px 10px 30px;margin-left:14%;font-family:'mr-eaves-sans',sans-serif;">
-  <p>Created by: Nicole Coscolluela, Megan Cullen, Jason Norris, and Jeanette Shaffer</p>
+  <p>&nbsp;</p>
+	<p>Created by: Nicole Coscolluela, Megan Cullen, Jason Norris, and Jeanette Shaffer</p>
       <p>Project done for Digital History (HI534) at North Carolina State University, Fall 2016</p>
       <p>For a full bibliography, click <a href="https://docs.google.com/document/d/e/2PACX-1vSq_-u22vR9Nfrxgn560Rg_pO4LdeGTdunU0BBmBSQFlDhgZJf3DEm531p-Y0X-XCQxLujVI8GZNHRs/pub">here</a>.</p>
   <p>Contact information: <a href="mailto:fsantos2@ncsu.edu" title="fsantos2@ncsu.edu">Frederico Freitas</a>.</p>
