--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
         <!-- End timeline iframe. -->
     <div class= "container" style="color: #282E34; background-color:#fff;text-align:left;width:85.75%; overflow:hidden;margin-left: 14.25%;">
-        <a name="intro"></a><h3>Introduction</h3>
+        <a name="intro"></a><h3 style="padding-left: 50px;">Introduction</h3>
         <div id="introdiv">
             <p id="text">The war over the fate of American public schools and the attempt to integrate white and African American students intersected with issues of race, education, economic status, and civil rights. In this way, it offered a divisive and symbolic arena for Southern whites to square off with their African American and liberal neighbors, as well as the federal government. The nation’s attention shifted towards a handful of communities that became overwhelmed by the conflict (such as Boston, Massachusetts and Louisville, Kentucky) and the media watched as marches, riots, and demonstrations consumed the cities. Charlotte, North Carolina emerged at the center of the controversy, setting both legal and social precedents that would influence, reinforce, and reflect the attitude of the nation regarding school desegregation. This is the chronicle of one city’s attempt to integrate its public schools through mandatory busing and the aftermath that followed.</p>
         </div>
