--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <div class= "container" style="color: #282E34; background-color:#fff;text-align:left;width:85.75%; overflow:hidden;margin-left: 14.25%;">
         <a name="intro"></a><h3 style="padding-left: 50px;">Introduction</h3>
         <div id="introdiv">
-            <p id="text">The war over the fate of American public schools and the attempt to integrate white and African American students intersected with issues of race, education, economic status, and civil rights. In this way, it offered a divisive and symbolic arena for Southern whites to square off with their African American and liberal neighbors, as well as the federal government. The nation’s attention shifted towards a handful of communities that became overwhelmed by the conflict (such as Boston, Massachusetts and Louisville, Kentucky) and the media watched as marches, riots, and demonstrations consumed the cities. Charlotte, North Carolina emerged at the center of the controversy, setting both legal and social precedents that would influence, reinforce, and reflect the attitude of the nation regarding school desegregation. This is the chronicle of one city’s attempt to integrate its public schools through mandatory busing and the aftermath that followed.</p>
+            <p id="text">The war over the fate of American public schools and the attempt to integrate white and African American students intersected with issues of race, education, economic status, and civil rights. In this way, it offered a divisive and symbolic arena for Southern whites to square off with their African American and liberal neighbors, as well as the federal government. The nation’s attention shifted towards a handful of communities that became overwhelmed by the conflict (such as Boston, Massachusetts and Louisville, Kentucky) and the media watched as marches, riots, and demonstrations consumed the cities. Charlotte, North Carolina emerged at the center of the controversy, setting both legal and social precedents that would influence, reinforce, and reflect the attitude of the nation regarding school desegregation. The slider below demonstrates this segregated state of Charlotte's schools, and by proxy the majority of the rest of the nation's schools, on the eve of mandatory busing in 1970. It also visualizes the resegregation of Charlotte's schools in 2015 after the end of mandatory busing. This is the chronicle of one city’s attempt to integrate its public schools through mandatory busing and the aftermath of that decision.
+</p>
         </div>
         <!--Begin 2007/2015 slider.-->  
             <div id="comparison">
@@ -49,7 +50,7 @@
                     }
                 </script> 
         <div id="key">
-            <p>Key: Image when slid to the left is student demographic information from 1970, and when slid to the right it is student demographic information from 2015; both datasets are of Charlotte-Mecklenburg schools. The beige tones represent fairly well integrated schools.</p>
+            <p>Key: Left image is 1970 student demographics, and right image is 2015 student demographics. Red means a mostly African American population, beige represents integrated schools, and white indicates a mostly white student population.</p>
         </div>
         <!-- End 2007/2015 slider. -->
     </div>
