--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <title>Beyond Black and White: Visualizing Charlotte's Busing Story</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" media="(max-width: 401px)" href="/css/max-401px.css">
+    <link rel="stylesheet" media="(min-width: 402px) and (max-width: 600px)" href="/css/max-600px.css">
+    <link rel="stylesheet" media="(min-width: 601px) and (max-width: 735px)" href="/css/max-735px.css">
+    <link rel="stylesheet" media="(min-width: 736px) and (max-width: 900px)" href="/css/max-900px.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
