--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="image-comparison-slider/css/reset.css"> <!-- CSS reset -->
+    <link rel="stylesheet" href="image-comparison-slider/css/style.css"> <!-- Resource style -->
+    <script src="image-comparison-slider/js/modernizr.js"></script> <!-- Modernizr -->
 </head>
     <body>
         <!--BEGIN NAV -->
@@ -37,21 +41,23 @@
 </p>
         </div>
         <!--Begin 2007/2015 slider.-->  
-            <div id="comparison">
-                <figure>
-                <div id="divisor"></div>
-                </figure>
-                <input type="range" min="0" max="100" value="50" id="slider" oninput="moveDivisor()">
-                </div>
-                <script type="text/javascript">
-                    var divisor = document.getElementById("divisor"),
-                        slider = document.getElementById("slider");
-                    function moveDivisor() { 
-	                   divisor.style.width = slider.value+"%";
-                    }
-                </script> 
+<div id="comparison">
+            <figure class="cd-image-container">
+		<img src="1971redo.png" alt="Original Image">
+		<span class="cd-image-label" data-type="original">1971</span>
+
+		<div class="cd-resize-img"> <!-- the resizable image on top -->
+			<img src="2015redo.png" alt="Modified Image">
+			<span class="cd-image-label" data-type="modified">2015</span>
+		</div>
+		<span class="cd-handle"></span>
+	</figure> <!-- cd-image-container -->
+<script src="image-comparison-slider/js/jquery-2.1.1.js"></script>
+<script src="image-comparison-slider/js/jquery.mobile.custom.min.js"></script> <!-- Resource jQuery -->
+<script src="image-comparison-slider/js/main.js"></script> <!-- Resource jQuery -->
         <div id="key">
-            <p>Key: Left image is 1970 student demographics, and right image is 2015 student demographics. Red means a mostly African American population, beige represents integrated schools, and white indicates a mostly white student population.</p>
+            <p><i>Key: Left image is 1970 student demographics, and right image is 2015 student demographics. Red means a mostly African American population, beige represents integrated schools, and white indicates a mostly white student population.</i></p>
+        </div>
         </div>
         <!-- End 2007/2015 slider. -->
     </div>
