--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <!--Begin 2007/2015 slider.-->  
 <div id="comparison">
             <figure class="cd-image-container">
-		<img src="1971redo.png" alt="Original Image">
+		<img src="image-comparison-slider/1971redo.png" alt="Original Image">
 		<span class="cd-image-label" data-type="original">1971</span>
 
 		<div class="cd-resize-img"> <!-- the resizable image on top -->
-			<img src="2015redo.png" alt="Modified Image">
+			<img src="image-comparison-slider/2015redo.png" alt="Modified Image">
 			<span class="cd-image-label" data-type="modified">2015</span>
 		</div>
 		<span class="cd-handle"></span>
