--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <script src="image-comparison-slider/js/jquery.mobile.custom.min.js"></script> <!-- Resource jQuery -->
 <script src="image-comparison-slider/js/main.js"></script> <!-- Resource jQuery -->
         <div id="key">
-            <p><i>Key: Left image is 1970 student demographics, and right image is 2015 student demographics. Red means a mostly African American population, beige represents integrated schools, and white indicates a mostly white student population.</i></p>
+            <p>Key: Red means a mostly African American population, beige represents integrated schools, and those closer to white indicate a mostly white student population.</p>
         </div>
         </div>
         <!-- End 2007/2015 slider. -->
