--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#politics">Politicians and Integration</a></li>
                 <li><a href="#golden">The "Golden Era" of the 1980s</a></li>
                 <li><a href="#charter">The Charter School Movement of the 1990s</a></li>
-                <li><a href="#end">The End of Busing</a></li>
+                <li><a href="#end">A Post-Racial City?</a></li>
 			</ul>
 			<!--END NAV-->
         <!-- Begin timeline iframe here.-->
@@ -165,7 +165,7 @@ span.onclick = function() {
         </div>  
      <iframe width="85.75%" height="520" frameborder="0" align="right" src="https://jtnorris7.carto.com/viz/3827fae4-a187-11e6-8e70-0ee66e2c9693/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
         <div style="color: #282E34; background-color:#fff;text-align:left;padding:10px 50px 10px 50px;margin-left: 14.25%;">
-        <h3><a name="end"></a>The End of Busing</h3>
+        <h3><a name="end"></a>A Post-Racial City?</h3>
         <p class="text2">The birth of the Charter School Movement coincided with the demise of active integrationist efforts amid the public schools, including busing. The city’s success with busing, and with educational integration, had lasted for approximately three decades. However, the program was threatened when a white parent sued the school district because he believed his child was denied admittance into a local magnet school based on racial considerations. The Charlotte-Mecklenburg School Board attempted to defend its desegregation strategies, pointing to the success of the plan, but to no avail. In 1999, Federal District Court Judge Robert Potter ordered that race could no longer be considered in school assignments,  ruling that Charlotte-Mecklenburg schools had “eliminated, to the extent practicable, the vestiges of past discrimination in the traditional areas of school operations.” Potter had participated in the anti-busing movement throughout the 1960s as a citizen, which likely contributed to the outcome of the case. Charlotte-Mecklenburg Schools appealed the decision; however, in 2001 the Fourth Circuit Court of Appeals sided with the plaintiffs, arguing that Charlotte-Mecklenburg had succeeded in achieving “unitary” status and that the schools could no longer be considered segregated. Charlotte's relationship with busing had come to an end.</p>
         <figure style="align:right;">
         <img src="http://charlottemagazine-images.dashdigital.com/0914_FEA_BUSING_VB_yearbook3.JPG?ver=1407950262"><figcaption>African American and white children, riding from the suburbs to an inner city school, Charlotte, North Carolina, 1973. Source: Library of Congress.</figcaption>
