--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+</html>
 <head>
     <title>Beyond Black and White: Visualizing Charlotte's Busing Story</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
