--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@ span.onclick = function() {
     </div>
 <div class="box3"><iframe width="85.75%" height="520" align="right" frameborder="0" src="https://jtnorris7.carto.com/viz/2cdd641c-b0f5-11e6-a813-0e3ebc282e83/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe> </div><br>
     <footer>
-  <div class="footer" style="color: aliceblue;background-color:#333333;text-align:center;padding:0 40px 10px 30px;margin-left:14%;font-family:'mr-eaves-sans',sans-serif;">
+  <div class="footer" style="color: aliceblue;background-color:#3b3b3b;text-align:center;padding:0 40px 10px 30px;margin-left:14%;font-family:'mr-eaves-sans',sans-serif;">
   <p>&nbsp;</p>
 	<p>Created by: Nicole Coscolluela, Megan Cullen, Jason Norris, and Jeanette Shaffer</p>
       <p>Project done for Digital History (HI534) at North Carolina State University, Fall 2016</p>
       <p>For a full bibliography, click <a href="https://docs.google.com/document/d/e/2PACX-1vSq_-u22vR9Nfrxgn560Rg_pO4LdeGTdunU0BBmBSQFlDhgZJf3DEm531p-Y0X-XCQxLujVI8GZNHRs/pub">here</a>.</p>
-  <p>Contact information: <a href="mailto:fsantos2@ncsu.edu" title="fsantos2@ncsu.edu">Frederico Freitas</a>.</p>
+  <p>Contact information: <a href="mailto:beyondblackandwhiteinfo@gmail.com" title="beyondblackandwhiteinfo@gmail.com">The Beyond Black and White Team</a>.</p>
 	  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
     </div> 
 </footer>
