Update footer font

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ span.onclick = function() {
     </div>
 <div class="box3"><iframe width="85.75%" height="520" align="right" frameborder="0" src="https://jtnorris7.carto.com/viz/2cdd641c-b0f5-11e6-a813-0e3ebc282e83/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe> </div><br>
     <footer>
-  <div class="footer" style="color: aliceblue;background-color:#3b3b3b;text-align:center;padding:0 40px 10px 30px;margin-left:14%;font-family:'mr-eaves-sans',sans-serif;">
+  <div class="footer" style="color: aliceblue;background-color:#3b3b3b;text-align:center;padding:0 40px 10px 30px;margin-left:14%;font-family:'Libre Baskerville', serif;">
   <p>&nbsp;</p>
 	<p>Created by: Nicole Coscolluela, Megan Cullen, Jason Norris, and Jeanette Shaffer</p>
       <p>Project done for Digital History (HI534) at North Carolina State University, Fall 2016</p>
