Fix network modal
Updated source for modal image

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<p class="text2">While white parents began enrolling their children in private schools in the 1970s in order to avoid busing, a mass influx of charter schools did not occur until the mid-1990s. Providing students with an alternative to public schools, charter schools offered disgruntled parents independence and control. For instance, while the charter schools received public funds, they were not governed by a state or local school board; rather, each school was operated by a community board who possessed the ability to hire teachers, set hours, and create their own curriculums. The approval of the Charter School Act in 1996 marked the advent of North Carolina’s Charter School Movement. Demand for charter schools and the regulatory freedom that they offered was so high that twenty-seven such institutions opened throughout North Carolina in 1997 alone.</p> 
 <!--Begin network modal image-->
 <!-- Trigger the Modal -->
-<img id="myImg" src="http://www4.ncsu.edu/~jtnorri2/network.jpg" alt="Charter School Network" width="500" height="300" align="right">
+<img id="myImg" src="https://beyondblackandwhite.github.io/network.png" alt="Charter School Network" width="500" height="300" align="right">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
