--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
     <a name="politics"></a><h3>The Opposition: Politicians</h3>
     <p class="text2">Responding to the anti-busing demands of their constituents, politicians (ranging from the local to the federal level) adopted public anti-busing sentiment as part of their political maneuvering. Due to the overwhelming unpopularity of busing, politicians - both conservative and liberal - were forced to adopt anti-busing rhetoric in order to maintain their political positions. For instance, Senator Jesse Helms of North Carolina (1973-2003) staunchly opposed busing, arguing that the integrationist effort undermined individual rights <i>(see the audio clips below this paragraph)</i>. Presidents Gerald Ford, Richard Nixon, and Ronald Reagan echoed these sentiments, demanding that Congress outlaw “forced busing” and reinstate “freedom of choice” in educational matters. Referring to mandatory busing as a “failed experiment,” Reagan and other politicians maintained that while racial segregation was undesirable, mandatory busing was not the answer. </p>
     <audio controls>
-    <source src="http://www4.ncsu.edu/~jtnorri2/helms.mp3" type="audio/mpeg">
+    <source src="https://beyondblackandwhite.github.io/jesse_helms.mp3" type="audio/mpeg">
     It seems your browser does not support this audio. 
     </audio>
 	<p class="text2">Sen. Jesse Helms on individual rights</p>
     <audio controls>
-     <source src="http://www4.ncsu.edu/~jtnorri2/helms2.mp3" type="audio/mpeg">
+     <source src="https://beyondblackandwhite.github.io/helms_2.mp3" type="audio/mpeg">
     It seems your browser does not support this audio.
     </audio>
 	<p class="text2">Sen. Jesse Helms on discontent with busing</p>
